[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "triage-scheduler"
version = "0.3.0"
description = "A meta-scheduler that watches signals and reorders its own priority queue."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Aaron K. Clark", email = "akclark@thenetwerk.net" },
]
keywords = ["scheduler", "priority-queue", "task-management", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/CryptoJones/Triage"
Repository = "https://github.com/CryptoJones/Triage"
Mirror = "https://codeberg.org/CryptoJones/Triage"
Issues = "https://github.com/CryptoJones/Triage/issues"
"Nebraska Footer" = "https://xkcd.com/2347/"

[project.scripts]
triage = "triage.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/triage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
